--- a/package.json
+++ b/package.json
@@ -10,8 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.0",
+    "@reduxjs/toolkit": "^2.2.1",
+    "antd": "^5.14.2",
+    "axios": "^1.6.7",
+    "chart.js": "^4.4.1",
+    "html-react-parser": "^5.1.8",
+    "millify": "^6.1.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
